<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SafetyWeb</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="invalid_credentials">Invalid username or password</string>
	<string name="no_children">No children to display</string>
	<string name="please_wait">Please wait...</string>
	<string name="retrieving_data">Loading data...</string>
	<string name="loading">Loading...</string>
	<string name="copyright">Copyright SafetyWeb, 2010</string>
	<string name="positives">Positives</string>
	<string name="redflags">Red Flags</string>
	<string name="warnings">Warnings</string>
	<string name="logging_in">Logging in...</string>
	<string name="more_results">Older Activity</string>
	<string name="more">more</string>
	<string name="blog_link">SafetyWeb Blog</string>
	<string name="blog">Blog</string>
	<string name="logout">Log Out</string>
	<string name="exit">Exit</string>
	<string name="about_us">About Us</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="terms">Terms of Use</string>
</resources>
